--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "3.3.4",
     "mongodb":"1.3.23",
-    "mongoose":"3.8.25"
+    "mongoose":"3.8.25",
+    "nodemon":"1.3.7"
   }
 }
