--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "mongodb":"1.3.23",
     "mongoose":"3.8.25",
     "nodemon":"1.3.7"
-  }
+  },
+  "scripts": {
+  "lint": "./node_modules/.bin/jshint . --reporter=./node_modules/jshint-full-path/index.js",
+  "pretest": "npm run-script lint",
+  "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive -R spec -r should",
+  "posttest": "./node_modules/.bin/istanbul check-coverage && rm -rf coverage"
+}
 }
