--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-    "name": "TargetShootingDatabase-Server",
-    "version": "0.0.1",
-    "private": true,
-    "dependencies": {
-        "express": "3.3.4",
-        "mongodb": "1.3.23",
-        "mongoose": "3.8.25",
-        "nodemon": "1.3.7"
-    },
-    "scripts": {
-        "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive -R spec -r should",
-        "posttest": "./node_modules/.bin/istanbul check-coverage "
-    }
+  "name": "TargetShootingDatabase",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "~1.12.0",
+    "cookie-parser": "~1.3.4",
+    "debug": "~2.1.1",
+    "express": "~4.12.2",
+    "jade": "~1.9.2",
+    "morgan": "~1.5.1",
+    "serve-favicon": "~2.2.0",
+    "chai":"latest"
+  }
 }
