--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
-    "chai":"latest",
-    "sinon":"latest",
-    "nodemon":"latest"
+    "chai":"~2.3.0",
+    "sinon":"~1.14.1",
+    "nodemon":"~1.3.7",
+    "mocha":"~2.2.4"
   }
 }
