--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "TargetShootingDatabase",
-  "version": "0.0.0",
+  "name": "TargetShooting",
+  "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
+  "description": "New Swagger API Project",
+  "keywords": [],
+  "author": "",
+  "license": "",
+  "main": "app.js",
   "dependencies": {
-    "body-parser": "~1.12.0",
-    "cookie-parser": "~1.3.4",
-    "debug": "~2.1.1",
-    "express": "~4.12.2",
-    "jade": "~1.9.2",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
-    "chai":"~2.3.0",
-    "sinon":"~1.14.1",
-    "nodemon":"~1.3.7",
-    "mocha":"~2.2.4"
+    "express": "^4.12.3",
+    "swagger-express-mw": "0.0.x"
+  },
+  "devDependencies": {
+    "should": "^5.2.0",
+    "supertest": "^0.15.0"
   }
 }
